<resources>
    <string name="app_name">ОРТ и НЦТ</string>
    <string name="age_choice_label">Возраст</string>
    <string name="class_choice_label">Выберите класс</string>
    <string name="city_choice_label">Выберите регион</string>
    <string name="variant_choice_label">Выберите вариант</string>
    <string name="kyrgyz_lanuage">кыргызча</string>
    <string name="russian_lanuage">русский</string>
    <string name="ort_text">ОРТ</string>
    <string name="nct_text">НЦТ</string>
    <string name="about_us">О нас</string>
    <string name="language_settings">Язык</string>
    <string name="about_us_text">\t\t\Необис клабс - молодежная, амбициозная организация, которая ставит своей целью развитие Кыргызстана в сфере информационных технологий, инноваций и образования. Мы верим, что развивая сферу IT технологий, мы имеем уникальную возможность сделать большой прорыв в развитии страны, поднять экономику и стать инновационной страной.</string>
    <string name="click_next">Далее</string>
    <string name="click_ready">Готово</string>
    <string name="warning_message_age">Выберите свой возраст…</string>
    <string name="warning_message_class">Выберите свой класс…</string>
    <string name="warning_message_city">Выберите свой город или регион…</string>
    <string name="choose_language_txt">Выберите язык</string>
    <string name="learning_material_txt">Учебные материалы</string>
    <string name="learning_material_menu_label">Материалы</string>
    <string name="information">Информация</string>
    <string name="practice_test">Предметный тест</string>
    <string name="statistics_title">Статистика</string>
    <string name="try_once_more_toast">Возникла неполадка, попробуйте еще раз!</string>
    <string name="no_connection_toast">Отсутствует сеть!</string>
    <string name="other_age_text">Другое</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="complete_button_txt">завершить</string>
    <string name="try_again_text">Подготовьтесь и попробуйте еще раз!</string>
    <string name="education_ort_list_empty_text">Учебный материал пуст…</string>
    <string name="practice_ort_test_list_empty_text">Предметный тест пуст…</string>
    <string name="info_about_nct_empty_text">Информация об НЦТ пуста…</string>
    <string name="final_ort_test_empty_text">Основной тест пуст…</string>
    <string name="final_additional_ort_test_empty_text">Дополнительный тест пуст…</string>
    <string name="statistics_empty_text">Статистика пуста…</string>
    <string name="exit_from_test_title">Выход из теста</string>
    <string name="exit_from_test_message">При выходе посреди теста результат не будет сохранён! Вы действительно хотите выйти?</string>
    <string name="yes_exit">Да</string>
    <string name="no_exit">Нет</string>
    <string name="congratulation_message">Молодец!\nВы справились с заданием!</string>
    <string name="loading_alert_title">Загрузка…</string>
    <string name="osh_region">Ош</string>
    <string name="bishkek">Бишкек</string>
    <string name="chui_region">Чуй</string>
    <string name="issyk_kul_region">Иссык-Куль</string>
    <string name="batken_region">Баткен</string>
    <string name="jalalabad_region">Джалал-Абад</string>
    <string name="talas_region">Талас</string>
    <string name="naryn_region">Нарын</string>
    <string name="project_info_ru">\tПриложение ОРТ и НЦТ предназначено для подготовки к тестированию ОРТ и НЦТ учеников средних школ Кыргызской Республики. Приложение включает все необходимое для подготовки к тестированию, например учебные материалы, статистика тестов, а также простой интерфейс тестов. Для хорошей подготовки включен показ правильного варианта ответа, имеется таймер показывающий оставшееся время. Приложение ОРТ и НЦТ не является абсолютно эффективным средством подготовки, поэтому советуется посещать официальные сайты и центры подготовки и тестирования ОРТ и НЦТ.</string>
    <string name="project_info_kg">\t"ОРТ и НЦТ" тиркемеси Кыргыз Республикасынын орто мектептеринин окуучуларын ОРТ жана НЦТ тестирлөөгө даярдоо үчүн иштелип чыккан. Тиркеме тестирлөөгө даярданууга керектүү нерселердин бардыгын камтыйт, мисалы, окуу материалдары, тест статистикасы жана жөнөкөй тест интерфейси. Жакшы даярдануу үчүн туура жооптун дисплейи камтылган, калган убакытты көрсөтүүчү таймер бар. Бул тиркеме таптакыр эффективдүү окуу куралы эмес, ошондуктан ОРТ жана НЦТин расмий веб-сайттарына жана окуу жана тестирлөө борборлоруна баруу сунушталат.</string>
    <string name="sorry_for_inconvience_absent_test">Извините за неудобство, тест по этому предмету пока отсутствует</string>
    <string name="screen_in_development">Страница находится в разработке...</string>
</resources>
