<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.ChooseCity"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="5">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/city_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp">

                    <RadioButton
                        style="@style/SuperAppTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bishkek"
                        android:textSize="17dp" />

                    <RadioButton
                        style="@style/SuperAppTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/issyk_kul_region"
                        android:textSize="17dp" />

                    <RadioButton
                        style="@style/SuperAppTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/batken_region"
                        android:textSize="17dp" />

                    <RadioButton
                        style="@style/SuperAppTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/jalalabad_region"
                        android:textSize="17dp" />

                    <RadioButton
                        style="@style/SuperAppTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/chui_region"
                        android:textSize="17dp" />

                    <RadioButton
                        style="@style/SuperAppTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/osh_region"
                        android:textSize="17dp" />


                    <RadioButton
                        style="@style/SuperAppTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/talas_region"
                        android:textSize="17dp" />

                    <RadioButton
                        style="@style/SuperAppTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/naryn_region"
                        android:textSize="17dp" />

                </RadioGroup>
            </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/click_ready"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/round_corner_button_green"
            android:button="@null"
            android:text="@string/click_ready"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:theme="@style/SuperAppTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>