<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    tools:context=".authorization.ChooseLanguage">

    <!-- Language choice pre-app layout -->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="238dp"
        android:layout_height="192dp"
        android:layout_marginBottom="212dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_language_txt"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="351dp" />

        <Button
            android:id="@+id/to_russian"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/round_corner_button_inversed"
            android:button="@null"
            android:text="@string/russian_lanuage"
            android:textColor="@drawable/button_text_color"
            android:textSize="18dp" />

        <Button
            android:id="@+id/to_kyrgyz"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/round_corner_button_inversed"
            android:button="@null"
            android:text="@string/kyrgyz_lanuage"
            android:textColor="@drawable/button_text_color"
            android:textSize="18dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo_ort_nct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_logo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintEnd_toStartOf="@+id/logo_ort_nct"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_ort_label" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_nct_label" />
</android.support.constraint.ConstraintLayout>